--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
             <p class='  tufte-margin'><span class="newthought">
                     I'm  an Assistant Professor (<i>Juniorprofessor</i>) of Quantitative Macroeconomics </span>at the <a href='http://www2.vwl.uni-mannheim.de/10.1.html'> University of Mannheim</a>.
-                   <span class="marginnote"><img style='width=10%' src="./img/KPytka.JPG" alt="Image of a Krzysztof Pytka"/></span> 
+                   <span class="marginnote"><img style='width=20%' src="./img/KPytka3.JPG" alt="Image of a Krzysztof Pytka"/></span> 
                       I specialize in Macroeconomics, in particular in 1. inequality; 2. consumption; and 3. (price) search theory. 
                       My technical interests also cover computational economics and (applied) statistical learning. 
                       <!-- For some time, I've focused on incorporating -->
@@ -474,7 +474,7 @@ The quantitative model suggests that thanks to this channel the  tension between
                         <h2>Teaching</h2>
                         <p>At Mannheim I give following lectures:
                         <ol class='  tufte-margin'>
-                            <li>Quantitative Macroeconomics with Heterogenous Households [Ph.D. course];</li>
+                            <li>Quantitative Macroeconomics with Heterogeneous Households [Ph.D. course];</li>
                             <li>Advanced Macroeconomics [M.Sc. course];</li>
                             <li>Statistical Learning and Big Data with R [B.A. course].</li>
                         </ol> 
