--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                                 <br> L7 3-5, Office 2.09
                                 <br>68161 Mannheim, Germany
                                 <br> Phone: +49.621.181.181.7
-                                <br> e-mail: <a href="http://www.google.com/recaptcha/mailhide/d?k=01nBv94iDm1YL_1lgkjyZ0SQ==&amp;c=x8GoP2A7JuAOH6lnIAGq75Fo8ROPcR8-5zWih-i6HWo=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01nBv94iDm1YL_1lgkjyZ0SQ\x3d\x3d\x26c\x3dx8GoP2A7JuAOH6lnIAGq75Fo8ROPcR8-5zWih-i6HWo\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">p***@uni-mannheim.de</a>
+                                <br> e-mail: <a href="http://scr.im/40rz" title="Reveal this e-mail address">p***@uni-mannheim.de</a>
                             </p>
                             <!-- </address> -->
             
