--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
             <p class='  tufte-margin'><span class="newthought">
                     I'm  an Assistant Professor (<i>Juniorprofessor</i>) of Quantitative Macroeconomics </span>at the <a href='http://www2.vwl.uni-mannheim.de/10.1.html'> University of Mannheim</a>.
-                   <span class="marginnote"><img style='width=20%' src="./img/KPytka3.jpg" alt="Image of a Krzysztof Pytka"/></span> 
+                   <span class="marginnote"><img style='width=20%' src="./img/KPytka_web.jpg" alt="Image of a Krzysztof Pytka"/></span> 
                       I specialize in Macroeconomics, in particular in 1. inequality; 2. consumption; and 3. (price) search theory. 
                       My technical interests also cover computational economics and (applied) statistical learning. 
                       <!-- For some time, I've focused on incorporating -->
