--- a/index.html
+++ b/index.html
@@ -328,8 +328,10 @@
             <p class='  tufte-margin'><span class="newthought">
                     I'm  an Assistant Professor (<i>Juniorprofessor</i>) of Quantitative Macroeconomics </span>at the <a href='http://www2.vwl.uni-mannheim.de/10.1.html'> University of Mannheim</a>.
                    <span class="marginnote"><img style='width=20%' src="./img/KPytka4.jpg" alt="Image of a Krzysztof Pytka"/></span> 
-                      I specialize in Macroeconomics, in particular in 1. inequality; 2. consumption; and 3. (price) search theory. 
-                      My technical interests also cover computational economics and (applied) statistical learning. 
+                   In my research I am intereste how the heterogeneity of individuals affects macroeconomic outcomes.
+                   Tools that I use span  structural models and machine learning.
+                      <!-- I specialize in Macroeconomics, in particular in 1. inequality; 2. consumption; and 3. (price) search theory. 
+                      My technical interests also cover computational economics and (applied) statistical learning.  -->
                       <!-- For some time, I've focused on incorporating -->
                 <!-- frictions in the purchasing technology into the standard incomplete markets model. -->
 
@@ -446,7 +448,7 @@ The quantitative model suggests that thanks to this channel the  tension between
                 <h4>1. General Equilibrium Theory of Shopping, Consumption, and Price Dispersion <span style='font-style: italic; font-weight: 400;'>(jointly with <a href='https://gregkaplan.uchicago.edu' style='text-decoration: none; color: rgb(10,10,10); '> Greg Kaplan</a>)</span></h4>
 
                 <h4>2. Labor Market and Business Cycle: Expansion vs. Contraction</h4>
-                <h4>3. Shape-Preserving Chebyshev Approximation of Multivariate Functions</h4>
+                <!-- <h4>3. Shape-Preserving Chebyshev Approximation of Multivariate Functions</h4> -->
 
 
                 <!-- <ol class='  tufte-margin' >
