--- a/index.html
+++ b/index.html
@@ -371,8 +371,35 @@
 
             <h2 class='  tufte-margin'>Research</h1>
                 <h3>Working Papers</h3>
-                <h4>1. Shopping Effort in Self-Insurance Economies
-                    <span style='text-decoration: none; font-weight: 400;'>- Job Market Paper
+                <h4>1. Understanding the Sources of Earnings Losses After Job Displacement: <br> A Machine-Learning Approach
+                    <span style='text-decoration: none; font-weight: 400;'> 
+                        (jointly with <a href='https://sites.google.com/site/andreasgulyas/home?authuser=0' style='text-decoration: none; color: rgb(10,10,10); '> Andreas Gulyas</a>)
+                         <a href='https://www.dropbox.com/s/5y69mkssot72bqv/GulyasPytka_earnings_losses.pdf?dl=0'> <i class="fa fa-file-pdf-o" style='text-decoration: none;'
+                         aria-hidden="true"></i>[article]</a>
+       </span>
+
+                </h4>
+
+                
+
+                <p style='text-align: justify; font-size: .9rem; font-family: "Linux Libertine"'>
+
+
+
+                    <!-- <blockquote style='text-align: justify; font-size: .9rem; font-family: "Linux Libertine"'> -->
+                        We  document the sources behind earnings losses of job displacement adapting the generalized random forest due to <a style="text-decoration: none;" href="https://projecteuclid.org/euclid.aos/1547197251">Athey et al. (2019)</a>. 
+                        Using administrative data from Austria over three decades, we show that displaced workers face large and persistent earnings losses. 
+                        We identify substantial heterogeneity in losses across workers.
+                        The interquartile range of the estimated losses is equal to   52,000 euros, which is more than 80% of average losses.
+                        The most vulnerable are high-income, high-tenure workers employed at well-paying firms in the manufacturing sector.
+                        Our methodology allows us to consider many competing theories of earnings losses prominently discussed in the literature.
+                        The two most important factors are the displacement firm's wage premia and the availability of well paying jobs in the local labor market, implying losses in employer specific wage components are key for the understanding of earnings losses. 
+                        
+                    <!-- </blockquote> -->
+                </p>
+
+                <h4>2. Shopping Effort in Self-Insurance Economies
+                    <span style='text-decoration: none; font-weight: 400;'> (in revision)
                          <a href='./Pytka_JMP.pdf'> <i class="fa fa-file-pdf-o" style='text-decoration: none;'
                          aria-hidden="true"></i>[article]</a>
        <a href='./NBER_SI_Pytka_presentation.pdf'>
@@ -400,7 +427,7 @@
                     generate important macroeconomic implications for modeling inequality and, in general, household consumption.
                     <!-- </blockquote> -->
                 </p>
-                <h4>2. Bargain Hunting in Equilibrium Price Dispersion </h4>
+                <h4>3. Bargain Hunting in Equilibrium Price Dispersion </h4>
 
                 <p style='text-align: justify; font-size: .9rem; font-family: "Linux Libertine"'>
 
