--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ The quantitative model suggests that thanks to this channel the  tension between
       <li>Shape-Preserving Chebyshev Approximation of Multivariate Functions</li>
    </ol> -->
 
-                <h2 class='  tufte-margin'>References</h1>
+                <!-- <h2 class='  tufte-margin'>References</h1>
                     <p class='  tufte-margin'>
                         People who can say something more about my research agenda (and me):
                         <ol class='  tufte-margin'>
@@ -499,7 +499,7 @@ The quantitative model suggests that thanks to this channel the  tension between
                             <li><span class="newthought"><a href='http://markaguiar.com' style='text-decoration: none;'>Mark Aguiar </span>                                (Princeton).</a>
                             </li>
 
-                        </ol>
+                        </ol> -->
 
                         
                         <h2>Teaching</h2>
