--- a/index.html
+++ b/index.html
@@ -227,6 +227,19 @@
             }
         }
     </style>
+
+<style type="text/css">
+    .mobileHide { display: inline; } 
+  
+    /* Smartphone Portrait and Landscape */ 
+    @media only screen 
+      and (min-device-width : 320px) 
+      and (max-device-width : 480px){ 
+       .mobileHide { display: none;}
+    }
+  </style>
+
+
     <link rel="stylesheet" href="tufte.css" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -327,14 +340,15 @@
 
             <p class='  tufte-margin'><span class="newthought">
                     I'm  an Assistant Professor (<i>Juniorprofessor</i>) of Quantitative Macroeconomics </span>at the <a href='http://www2.vwl.uni-mannheim.de/10.1.html'> University of Mannheim</a>.
-                   <span class="marginnote"><img style='width=20%' src="./img/KPytka4.jpg" alt="Image of a Krzysztof Pytka"/></span> 
+                   <span class="marginnote"> <img style='width=20%' src="./img/KPytka4.jpg" alt="Image of Krzysztof Pytka"/> </span> 
                    In my research I am interested how the heterogeneity of individuals affects macroeconomic outcomes.
                    Tools that I use span  structural models and machine learning.
                       <!-- I specialize in Macroeconomics, in particular in 1. inequality; 2. consumption; and 3. (price) search theory. 
                       My technical interests also cover computational economics and (applied) statistical learning.  -->
                       <!-- For some time, I've focused on incorporating -->
                 <!-- frictions in the purchasing technology into the standard incomplete markets model. -->
-
+                
+                <div class="mobileHide"> TEXT OR IMAGE NOT FOR MOBILE HERE </div>
             </p>
             
             <h2>Contact</h2>
