no responsive back

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
         <!-- <div class="mobileHide"> </div> -->
 
-    <section class="mobileHide module parallax parallax-1 fullheight" style='min-height:100%;'>
+    <section class="module parallax parallax-1 fullheight" style='min-height:100%;'>
         <div class="container" style="position:fixed;
 " id='title_intro'>
 
