--- a/index.html
+++ b/index.html
@@ -242,9 +242,10 @@
 
     <link rel="stylesheet" href="tufte.css" />
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"> -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css"> -->
     <!-- <script src="https://kit.fontawesome.com/a54366346f.js"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="
         crossorigin="anonymous"></script>
     <script src='./js/centerThis.js'></script>
@@ -388,8 +389,10 @@
                 <h4>1. Understanding the Sources of Earnings Losses After Job Displacement: <br> A Machine-Learning Approach
                     <span style='text-decoration: none; font-weight: 400;'> 
                         (jointly with <a href='https://sites.google.com/site/andreasgulyas/home?authuser=0' style='text-decoration: none; color: rgb(10,10,10); '> Andreas Gulyas</a>)
-                         <a href='https://www.dropbox.com/s/n7z8zmat79wpimt/GulyasPytka_earnings_losses.pdf?dl=0'> <i class="fa fa-file-pdf-o" style='text-decoration: none;'
+                         <a href='https://www.dropbox.com/s/n7z8zmat79wpimt/GulyasPytka_earnings_losses.pdf?dl=0'> <i class="far fa-file-pdf" style='text-decoration: none;'
                          aria-hidden="true"></i>[article]</a>
+                         <a href='https://www.dropbox.com/s/2p7nc40qhpg58u4/2019_11_Carlos_III_43.pdf?dl=0' target="blank_">
+                            <i class="fas fa-chart-pie" style='text-decoration: none;' aria-hidden="true"></i>[slides] </a>
        </span>
 
                 </h4>
@@ -420,16 +423,29 @@ Our methodology allows us to consider many competing theories of earnings losses
 The two most important factors are the displacement firm's wage premia and the availability of well paying jobs in the local labor market.
 Our overall findings provide evidence that earnings losses can be understood by mean reversion in firm rents and losses in match quality, rather than by a destruction of firm-specific human capital. 
 
+<div style='text-align: justify; font-size: .9rem; font-family: "Linux Libertine"'>
+        Additional resources using the results from the paper:
+        <ul style='text-align: justify; font-size: .75rem; font-family: "Linux Libertine"'>
+            <li> Web app predicting earnings losses conditioned on individual characteristics  <a href="http://46.101.186.181:3838/earnloss/" target="blank_" aria-hidden="true">
+                <i class="fas fa-laptop-code" style='text-decoration: none;' aria-hidden="true"></i>[web app] </a>                
+                </li>
+            <li> General-audience presentation about using the GRF for estimation of heterogeneous treatment effects.  <a href='https://www.dropbox.com/s/l1sopqmqljo651y/KPytka_SPP.pdf?dl=0' target="blank_">
+                <i class="fas fa-chart-pie" style='text-decoration: none;' aria-hidden="true"></i>[slides] </a></li>
+            <li> Presentation about using the GRF in business analytics. <a href='https://www.dropbox.com/s/01r1hzi9wuoif2m/McKinsey_grf.pdf?dl=0' target="blank_">
+                <i class="fas fa-chart-pie" style='text-decoration: none;' aria-hidden="true"></i>[slides] </a></li>
+        </ul>
+        </div>
+
                         
                     <!-- </blockquote> -->
                 </p>
 
                 <h4>2. Shopping Effort in Self-Insurance Economies
                     <span style='text-decoration: none; font-weight: 400;'> (in revision)
-                         <a href='./Pytka_JMP.pdf'> <i class="fa fa-file-pdf-o" style='text-decoration: none;'
+                         <a href='./Pytka_JMP.pdf'> <i class="far fa-file-pdf" style='text-decoration: none;'
                          aria-hidden="true"></i>[article]</a>
        <a href='./NBER_SI_Pytka_presentation.pdf'>
-       <i class="fa fa-pie-chart" style='text-decoration: none;' aria-hidden="true"></i>[slides] </a></span>
+       <i class="fas fa-chart-pie" style='text-decoration: none;' aria-hidden="true"></i>[slides] </a></span>
 
                 </h4>
 
