--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                 <h3>Working Papers</h3>
                 <h4>1. Understanding the Sources of Earnings Losses After Job Displacement: <br> A Machine-Learning Approach
                     <span style='text-decoration: none; font-weight: 400;'> 
-                        (jointly with <a href='https://sites.google.com/site/andreasgulyas/home?authuser=0' style='text-decoration: none; color: rgb(10,10,10); '> Andreas Gulyas</a>)
+                        (jointly with <a href='https://sites.google.com/site/andreasgulyas/home?authuser=0' style='text-decoration: underline; color: rgb(10,10,10); '> Andreas Gulyas</a>)
                          <a href='https://www.dropbox.com/s/n7z8zmat79wpimt/GulyasPytka_earnings_losses.pdf?dl=0'> <i class="far fa-file-pdf" style='text-decoration: none;'
                          aria-hidden="true"></i>[article]</a>
                          <a href='https://www.dropbox.com/s/2p7nc40qhpg58u4/2019_11_Carlos_III_43.pdf?dl=0' target="blank_">
@@ -426,7 +426,7 @@ Our overall findings provide evidence that earnings losses can be understood by 
 <div style='text-align: justify; font-size: .9rem; font-family: "Linux Libertine"'>
         Additional resources using the results from the paper:
         <ul style='text-align: justify; font-size: .75rem; font-family: "Linux Libertine"'>
-            <li> Web app predicting earnings losses conditioned on individual characteristics  <a href="http://46.101.186.181:3838/earnloss/" target="blank_" aria-hidden="true">
+            <li> Web app predicting earnings losses conditioned on individual characteristics  <a style="text-decoration: underline;" href="http://gulyas-pytka.app/earnloss/" target="blank_" aria-hidden="true">
                 <i class="fas fa-laptop-code" style='text-decoration: none;' aria-hidden="true"></i>[web app] </a>                
                 </li>
             <li> General-audience presentation about using the GRF for estimation of heterogeneous treatment effects.  <a href='https://www.dropbox.com/s/l1sopqmqljo651y/KPytka_SPP.pdf?dl=0' target="blank_">
