link revisions and Antoine

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                         (jointly with <a href='https://sites.google.com/site/andreasgulyas/home?authuser=0' style='text-decoration: underline; color: rgb(10,10,10); '> Andreas Gulyas</a>)
                          <a href='https://www.dropbox.com/s/n7z8zmat79wpimt/GulyasPytka_earnings_losses.pdf?dl=0'> <i class="far fa-file-pdf" style='text-decoration: none;'
                          aria-hidden="true"></i>[article]</a>
-                         <a href='https://www.dropbox.com/s/2p7nc40qhpg58u4/2019_11_Carlos_III_43.pdf?dl=0' target="blank_">
+                         <a href='https://www.dropbox.com/s/bi7yx822vmk101g/2020_01_cml.pdf?dl=0' target="blank_">
                             <i class="fas fa-chart-pie" style='text-decoration: none;' aria-hidden="true"></i>[slides] </a>
        </span>
 
@@ -514,9 +514,11 @@ The quantitative model suggests that thanks to this channel the  tension between
 
 
                 <h3>Work in progress</h3>
-                <h4>1. General Equilibrium Theory of Shopping, Consumption, and Price Dispersion <span style='font-style: italic; font-weight: 400;'>(jointly with <a href='https://gregkaplan.uchicago.edu' style='text-decoration: none; color: rgb(10,10,10); '> Greg Kaplan</a>)</span></h4>
+                <h4>1. Rising Inequality vs. Price Stability: Optimal Monetary Policy under Fiscal Progressivity <span style='font-style: italic; font-weight: 400;'>(jointly with <a href='https://sites.google.com/site/antoinecamous/home' 
+                    style='text-decoration: none; color: rgb(10,10,10); '> Antoine Camous</a>)</span></h4>
+                <h4>2. General Equilibrium Theory of Shopping, Consumption, and Price Dispersion <span style='font-style: italic; font-weight: 400;'>(jointly with <a href='https://gregkaplan.uchicago.edu' style='text-decoration: none; color: rgb(10,10,10); '> Greg Kaplan</a>)</span></h4>
 
-                <h4>2. Labor Market and Business Cycle: Expansion vs. Contraction</h4>
+                <h4>3. Labor Market and Business Cycle: Expansion vs. Contraction</h4>
                 <!-- <h4>3. Shape-Preserving Chebyshev Approximation of Multivariate Functions</h4> -->
 
 
