--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ Our overall findings provide evidence that earnings losses can be understood by 
                     generate important macroeconomic implications for modeling inequality and, in general, household consumption.
                     <!-- </blockquote> -->
                 </p>
-                <h4>3. Bargain Hunting in Equilibrium Price Dispersion </h4>
+                <!-- <h4>3. Bargain Hunting in Equilibrium Price Dispersion </h4>
 
                 <p style='text-align: justify; font-size: .9rem; font-family: "Linux Libertine"'>
 
@@ -519,7 +519,7 @@ which gives rise to one unique symmetric dispersed equilibrium.
                     in which models are calibrated to the unstable one. I demonstrate that the stability of those allocations
                     can be recovered using the framework proposed in the paper. Moreover, in contrast to other models, in
                     my framework the degenerate Diamond (1971)-type equilibrium is shown to be unstable.-->
-                </p>
+                </p> -->
 
 
                 <!-- <h4>3. Monetary Policy and Price Search </h4>
