--- a/index.html
+++ b/index.html
@@ -513,13 +513,14 @@ which gives rise to one unique symmetric dispersed equilibrium.
  In addition to this, in contrast to the original model
  the degenerate Diamond (1971)-type equilibrium is unstable.
 
-                    <!--In this paper I propose a framework of search for consumption in which every search intensity can be rationalized as a stable
+                    In this paper I propose a framework of search for consumption in which every search intensity can be rationalized as a stable
                     equilibrium. I show that in search economies such as those proposed by Burdett and Judd (1983) the low-search
                     equilibrium is unstable and the high-search equilibrium is stable. I document examples from the literature
                     in which models are calibrated to the unstable one. I demonstrate that the stability of those allocations
                     can be recovered using the framework proposed in the paper. Moreover, in contrast to other models, in
                     my framework the degenerate Diamond (1971)-type equilibrium is shown to be unstable.-->
-                </p> -->
+                <!-- </p>  -->
+            
 
 
                 <!-- <h4>3. Monetary Policy and Price Search </h4>
