--- a/index.html
+++ b/index.html
@@ -541,10 +541,10 @@ The quantitative model suggests that thanks to this channel the  tension between
             -->
 
 
-                <h3>Work in progress</h3>
+                <!-- <h3>Work in progress</h3>
 
                 <h4>1. Rising Inequality vs. Price Stability: Optimal Monetary Policy under Fiscal Progressivity <span style="font-style: italic; font-weight: 400;">(jointly with <a href="https://sites.google.com/site/antoinecamous/home" style="text-decoration: none; color: rgb(10,10,10); "> Antoine Camous</a>)</span></h4>
-                <h4>2. General Equilibrium Theory of Shopping, Consumption, and Price Dispersion <span style='font-style: italic; font-weight: 400;'>(jointly with <a href='https://gregkaplan.uchicago.edu' style='text-decoration: none; color: rgb(10,10,10); '> Greg Kaplan</a>)</span></h4>
+                <h4>2. General Equilibrium Theory of Shopping, Consumption, and Price Dispersion <span style='font-style: italic; font-weight: 400;'>(jointly with <a href='https://gregkaplan.uchicago.edu' style='text-decoration: none; color: rgb(10,10,10); '> Greg Kaplan</a>)</span></h4> -->
 
                 
 
@@ -602,7 +602,7 @@ The quantitative model suggests that thanks to this channel the  tension between
 
                             <h2>Misc.</h2>
 
-                            <p>In my free time I (used to) write for
+                            <!-- <p>In my free time I (used to) write for
 
                                 <a href='http://hummuseconomicus.pl/'>Hummus Œconomicus, </a> a Polish popular-science blog
                                 about economics. <a href='http://hummuseconomicus.pl/author/kpytka/'>Here</a> you can find
@@ -610,7 +610,7 @@ The quantitative model suggests that thanks to this channel the  tension between
 
 
 
-                            </p>
+                            </p> -->
 
 
                             <p class='  tufte-margin'>If you're curious about the pronounciation of my given name it goes by [kʂɨʂt̪ɔf] <a style='text-decoration:none;'
