--- a/index.html
+++ b/index.html
@@ -389,16 +389,18 @@
 
                 <h4>1. Shopping Frictions with Household Heterogeneity:   Theory & Empirics
                     <span style='text-decoration: none; font-weight: 400;'> 
-                         <a href='./Shopping_Frictions.pdf'> <i class="far fa-file-pdf" style='text-decoration: none;'
+                         <a href='https://kpytka.github.io/Shopping_Frictions.pdf'> <i class="far fa-file-pdf" style='text-decoration: none;'
                          aria-hidden="true"></i>[article]</a>
-       <a href='./Hawaii_Workshop_2024.pdf'>
+       <a href='https://kpytka.github.io/Hawaii_Workshop_2024.pdf'>
        <i class="fas fa-chart-pie" style='text-decoration: none;' aria-hidden="true"></i>[slides] </a></span>
 
                 </h4>
 
+                
+
                 <!-- <span style='font-style: italic; font-size: .8rem; font-family: "Linux Libertine"'>Best Paper Prize for Young Economists at the WIEM’16 conference.</span> -->
 
-                <span style='font-style: italic; font-size: .8rem; font-family: "Linux Libertine"'>The previous  version of the article was distributed under the title ``Shopping Effort in Self-Insurance Economies.'' </span>
+                <span style='font-style: italic; font-size: .8rem; font-family: "Linux Libertine"'>(The previous  version of the article was distributed under the title ``Shopping Effort in Self-Insurance Economies.'') </span>
                 
 
                 <p style='text-align: justify; font-size: .9rem; font-family: "Linux Libertine"'>
@@ -422,7 +424,7 @@
                 <h4>2. Understanding the Sources of Earnings Losses After Job Displacement: <br> A Machine-Learning Approach
                     <span style='text-decoration: none; font-weight: 400;'> 
                         (jointly with <a href='https://sites.google.com/site/andreasgulyas/home?authuser=0' style='text-decoration: underline; color: rgb(10,10,10); '> Andreas Gulyas</a>)
-                         <a href='./Earnings_Losses_Sources.pdf'> <i class="far fa-file-pdf" style='text-decoration: none;'
+                         <a href='https://kpytka.github.io/Earnings_Losses_Sources.pdf'> <i class="far fa-file-pdf" style='text-decoration: none;'
                          aria-hidden="true"></i>[article]</a>
                          <!-- <a href='https://www.dropbox.com/s/bi7yx822vmk101g/2020_01_cml.pdf?dl=0' target="blank_">
                             <i class="fas fa-chart-pie" style='text-decoration: none;' aria-hidden="true"></i>[slides] </a> -->
