--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
 
             <h2 class='  tufte-margin'>Research</h1>
-                <h3>Working Papers</h3>
+                <!-- <h3>Working Papers</h3> -->
 
                 <h4>1. Understanding the Sources of Earnings Losses After Job Displacement: <br> A Machine-Learning Approach
                     <span style='text-decoration: none; font-weight: 400;'> 
@@ -484,7 +484,7 @@ Our findings suggest that earnings losses stem from mean reversion in firm wage 
                         (jointly with <a href='https://sites.google.com/site/andreasgulyas/home?authuser=0' style='text-decoration: underline; color: rgb(10,10,10); '> Andreas Gulyas</a>)
                          <a href='https://www.dropbox.com/s/mw87g0bz56mvu8a/GulyasPytka_covid.pdf?dl=0'> <i class="far fa-file-pdf" style='text-decoration: none;'
                          aria-hidden="true"></i>[article]</a>
-                         
+                <em>Published at CEPR Covid Economics (47)</em>
        </span>
 
                 </h4>
@@ -504,10 +504,10 @@ Covid-19-related job terminations are associated with lower losses in earnings a
                 </p>
 
 
-                <h3>Work in Progress</h3>
+                <!-- <h3>Work in Progress</h3> -->
 
 
-                <h4>1. Looking into the Consumption Black Box: Evidence from Scanner Data
+                <h4>4. Looking into the Consumption Black Box: Evidence from Scanner Data
                     <span style='text-decoration: none; font-weight: 400;'> 
                          (jointly with Daniel Runge) </span>
 
