--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 -->
 <html>
 	<head>
-		<title>Krzysztof Pytka</title>
+		<title>Krzysztof Pytka | Universität Mannheim </title>
+		<meta name="description" content="Cześć! This website belongs to Krzysztof Pytka (University of Mannheim)."/>
+	<meta name="keywords" content="Krzysztof Pytka, Economics, Econ, Macroeconomics, Macro, Big Data, consumer search, labor, machine learning,
+	household heterogeneity, academic, University of Mannheim, EUI, European University Institute, Florence"/>
+	<meta name="robots" content="index,follow" />
+
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
