--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ You can find my résumé <a href='https://www.dropbox.com/scl/fi/qw67a71hd4kx5q5
 								</p>
 								<p>
 									In my free time, I enjoy <a href="https://strava.app.link/9g1S6ElmdMb">long-distance biking</a> around the villages near Mannheim (and not only). 
-									Additionally, I like experimenting with my Raspberry Pi, and every now and then, I play <a href="https://www.youtube.com/@krzypy/videos">video games</a>.
+									Additionally, I like experimenting with my Raspberry Pi, and every now and then, I play <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/@krzypy/videos">video games</a>.
 								</p>
                             
 
