target="_blank" rel="noopener noreferrer"

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p >
                  
 				   I am an Assistant Professor (<i>Juniorprofessor</i>) of Quantitative Macroeconomics at 
-				   the <a href='http://www2.vwl.uni-mannheim.de/10.1.html'>University of Mannheim</a>. I completed my Ph.D. at the <a href="https://www.eui.eu/en/academic-units/department-of-economics">European University Institute</a> in Florence. 
+				   the <a href='http://www2.vwl.uni-mannheim.de/10.1.html'>University of Mannheim</a>. I completed my Ph.D. at the <a target="_blank" rel="noopener noreferrer" href="https://www.eui.eu/en/academic-units/department-of-economics">European University Institute</a> in Florence. 
 				   
 				 <br>
 				   <!-- In my research, I am particularly interested in how the heterogeneity of individuals and frictions in the retail market 
@@ -269,12 +269,12 @@ You can find my résumé <a target="_blank" rel="noopener noreferrer" href='http
 										<!-- <address> -->
 										<p>
 
-											<a href='http://www2.vwl.uni-mannheim.de/10.1.html'>Department of Economics </a>
+											<a target="_blank" rel="noopener noreferrer"  href='http://www2.vwl.uni-mannheim.de/'>Department of Economics </a>
 											<br>Universität Mannheim
 											<br> L7 3-5, Office 2.09
 											<br>68161 Mannheim, Germany
 											<br> Phone: +49.621.181.181.7
-											<br> e-mail: <a href="http://scr.im/40rz" title="Reveal this e-mail address">p***@uni-mannheim.de</a>
+											<br> e-mail: <a target="_blank" rel="noopener noreferrer"  href="http://scr.im/40rz" title="Reveal this e-mail address">p***@uni-mannheim.de</a>
 										</p>
 										<!-- </address> -->
 								</article>
