Mannheim address corrected

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p >
                  
 				   I am an Assistant Professor (<i>Juniorprofessor</i>) of Quantitative Macroeconomics at 
-				   the <a target="_blank" rel="noopener noreferrer" href='http://www2.vwl.uni-mannheim.de/10.1.html'>University of Mannheim</a>. I completed my Ph.D. at the <a target="_blank" rel="noopener noreferrer" href="https://www.eui.eu/en/academic-units/department-of-economics">European University Institute</a> in Florence. 
+				   the <a target="_blank" rel="noopener noreferrer" href='https://www.vwl.uni-mannheim.de'>University of Mannheim</a>. I completed my Ph.D. at the <a target="_blank" rel="noopener noreferrer" href="https://www.eui.eu/en/academic-units/department-of-economics">European University Institute</a> in Florence. 
 				   
 				 <br>
 				   <!-- In my research, I am particularly interested in how the heterogeneity of individuals and frictions in the retail market 
