--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ You can find my résumé <a target="_blank" rel="noopener noreferrer" href='http
 								
 								<p>2. Understanding the Sources of Earnings Losses After Job Displacement: <br> A Machine-Learning Approach
 									
-										(jointly with <a target="_blank" rel="noopener noreferrer" href='https://sites.google.com/site/andreasgulyas/home?authuser=0' > Andreas Gulyas</a>)
+										(jointly with <a href='https://sites.google.com/site/andreasgulyas/home?authuser=0' > Andreas Gulyas</a>)
 										<a target="_blank" rel="noopener noreferrer" href='https://kpytka.github.io/Earnings_Losses_Sources.pdf'> <br> <i class="far fa-file-pdf" style='text-decoration: none;'
 										aria-hidden="true"></i>[article]</a>
 										<!-- <a href='https://www.dropbox.com/s/bi7yx822vmk101g/2020_01_cml.pdf?dl=0' target="blank_">
