-Raspberry Pi -video games

--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@ You can find my résumé <a target="_blank" rel="noopener noreferrer" href='http
                                     href="http://upload.wikimedia.org/wikipedia/commons/c/c1/Pl-Krzysztof.ogg"><i class="fa fa-volume-up" aria-hidden="true"></i></a>                                in IPA. But <em>Christoph</em> is totally fine with me.
 								</p>
 								<p>
-									In my free time, I enjoy <a target="_blank" rel="noopener noreferrer" href="https://strava.app.link/9g1S6ElmdMb">long-distance biking</a> around the villages near Mannheim (and not only). 
-									Additionally, I like experimenting with my Raspberry Pi, and every now and then, I play <a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/@krzypy/videos">video games</a>.
+									In my free time, I enjoy going on <a target="_blank" rel="noopener noreferrer" href="https://strava.app.link/9g1S6ElmdMb">bike rides</a> around the scenic villages near Mannheim (and beyond). 
 								</p>
                             
 
