photo from Florence

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				
 You can find my résumé <a target="_blank" rel="noopener noreferrer" href='https://www.dropbox.com/scl/fi/qw67a71hd4kx5q5unkjjs/CV-KPytka.pdf?rlkey=a6qkdsmq5m61r8dr6yzt6mt3n&dl=0'>here</a>.
                     <span class="image main">
-						<img src="./images/KPytka4.jpg" alt="Image of Krzysztof Pytka"/> 
+						<img src="./images/KPytka.JPG" alt="Image of Krzysztof Pytka"/> 
 					</span>
                    
 
@@ -114,6 +114,8 @@ You can find my résumé <a target="_blank" rel="noopener noreferrer" href='http
 								<!-- <h3>Working Papers</h3> -->
 
 								<p>1. Shopping Frictions with Household Heterogeneity:   Theory & Empirics<br>
+									<!-- <a href="#" class="button primary icon solid fa-file-pdf">Article</a>
+									<a href="#" class="button primary icon solid fa-chart-pie">Slides</a><br> -->
 									<span style='text-decoration: none; font-weight: 400;'> 
 										 <a target="_blank" rel="noopener noreferrer" href='https://kpytka.github.io/Shopping_Frictions.pdf'> <i class="far fa-file-pdf" style='text-decoration: none;'
 										 aria-hidden="true"></i>[article]</a>
