--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				   This approach is supported by tools such as structural models and machine learning techniques.
 <br>
 				
-You can find my résumé <a target="_blank" rel="noopener noreferrer" href='https://www.dropbox.com/scl/fi/qw67a71hd4kx5q5unkjjs/CV-KPytka.pdf?rlkey=a6qkdsmq5m61r8dr6yzt6mt3n&dl=0'>here</a>.
+You can find my résumé <a target="_blank" rel="noopener noreferrer" href='https://www.kpytka.eu/CV.pdf'>here</a>.
                     <span class="image main">
 						<img src="./images/KPytka.JPG" alt="Image of Krzysztof Pytka"/> 
 					</span>
