new Earnings Losses

--- a/index.html
+++ b/index.html
@@ -139,8 +139,7 @@ You can find my résumé <a target="_blank" rel="noopener noreferrer" href='http
 								<p>2. Understanding the Sources of Earnings Losses After Job Displacement: <br> A Machine-Learning Approach
 									
 										(jointly with <a href='https://sites.google.com/site/andreasgulyas/home?authuser=0' > Andreas Gulyas</a>)
-										<a target="_blank" rel="noopener noreferrer" href='https://kpytka.github.io/Earnings_Losses_Sources.pdf'> <br> <i class="far fa-file-pdf" style='text-decoration: none;'
-										aria-hidden="true"></i>[article]</a>
+										<a target="_blank" rel="noopener noreferrer" href='https://kpytka.github.io/Understanding_the_Sources_of_Earnings_Losses.pdf'> <br> <i class="far fa-file-pdf" style='text-decoration: none;' aria-hidden="true"></i>[article]</a> <span style="color: #007bff; font-size: 0.8rem;">(new version!)</span>
 										<!-- <a href='https://www.dropbox.com/s/bi7yx822vmk101g/2020_01_cml.pdf?dl=0' target="blank_">
 											<i class="fas fa-chart-pie" style='text-decoration: none;' aria-hidden="true"></i>[slides] </a> -->
 										<!-- <br> -->
