--- a/index.html
+++ b/index.html
@@ -146,10 +146,12 @@ You can find my résumé <a target="_blank" rel="noopener noreferrer" href='http
 										<em>Revise&Resubmit at the Journal of Labor Economics</em>
 										<br>
 										<span style='font-size: .7rem; text-align: justify;'>
-										Applying a generalized random forest to Austrian administrative data, we uncover significant systematic heterogeneity in worker outcomes after job displacement.
-				A quarter of workers face wage losses of 30%, while another quarter experience no losses or even gain. 
-				Among many factors, firm wage premia are the most important determinant of the wage loss heterogeneity, while workers' age is the most important for employment losses.
-				Our findings suggest that earnings losses stem from mean reversion in firm wage premia rather than the destruction of firm-specific human capital. Compositional differences in individual characteristics account for most of the cyclicality in earnings losses.
+										
+Using generalized random forests in a difference-in-differences framework, we analyze heterogeneity in earnings losses following job displacement. We find substantial variation in short-term losses ranging  20-70\%. While all workers face long-term losses, employment rather than wage changes primarily drives heterogeneity. The most important predictor for employment losses is worker's age, while the firm wage premium is the most important one for wage losses. 
+We predict similar loss patterns for the  population excluded by the typical sample restrictions in the literature. 
+We further show how to create simple decision rules to target active labor market programs to high-loss individuals.
+
+
 										</span>
 
 <br>
