--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ You can find my résumé <a target="_blank" rel="noopener noreferrer" href='http
 										<br>
 										<span style='font-size: .7rem; text-align: justify;'>
 										
-Using generalized random forests in a difference-in-differences framework, we analyze heterogeneity in earnings losses following job displacement. We find substantial variation in short-term losses ranging  20-70\%. While all workers face long-term losses, employment rather than wage changes primarily drives heterogeneity. The most important predictor for employment losses is worker's age, while the firm wage premium is the most important one for wage losses. 
+Using generalized random forests in a difference-in-differences framework, we analyze heterogeneity in earnings losses following job displacement. We find substantial variation in short-term losses ranging  20-70%. While all workers face long-term losses, employment rather than wage changes primarily drives heterogeneity. The most important predictor for employment losses is worker's age, while the firm wage premium is the most important one for wage losses. 
 We predict similar loss patterns for the  population excluded by the typical sample restrictions in the literature. 
 We further show how to create simple decision rules to target active labor market programs to high-loss individuals.
 
