no slides for BlackBox

--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@ We further show how to create simple decision rules to target active labor marke
 									
 									<a target="_blank" rel="noopener noreferrer" href='https://kpytka.github.io/Looking_into_the_Consumption_Black_Box.pdf'> <i class="far fa-file-pdf" style='text-decoration: none;'
 										aria-hidden="true"></i>[article]</a>
-									<a target="_blank" rel="noopener noreferrer" href='https://kpytka.github.io/Consumption_Black_Box_slides.pdf'>
-									   <i class="fas fa-chart-pie" style='text-decoration: none;' aria-hidden="true"></i>[slides] </a></span>
+									<!-- <a target="_blank" rel="noopener noreferrer" href='https://kpytka.github.io/Consumption_Black_Box_slides.pdf'>
+									   <i class="fas fa-chart-pie" style='text-decoration: none;' aria-hidden="true"></i>[slides] </a> -->
+									</span>
 									   <br>
 									   <span style='font-size: .7rem; text-align: justify;'>
 										This paper examines the heterogeneity and persistence of household non-durable consumption. We address three questions: 
