--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@ You can find my résumé <a target="_blank" rel="noopener noreferrer" href='http
 										<a target="_blank" rel="noopener noreferrer" href='https://kpytka.github.io/Understanding_the_Sources_of_Earnings_Losses.pdf'> <br> <i class="far fa-file-pdf" style='text-decoration: none;' aria-hidden="true"></i>[article]</a> <span style="color: #007bff; font-size: 0.8rem;">(new version!)</span>
 										<!-- <a href='https://www.dropbox.com/s/bi7yx822vmk101g/2020_01_cml.pdf?dl=0' target="blank_">
 											<i class="fas fa-chart-pie" style='text-decoration: none;' aria-hidden="true"></i>[slides] </a> -->
-										<!-- <br> -->
-										<em>Revise&Resubmit at the Journal of Labor Economics</em>
+										<br>
+										<em>Conditionally Accepted at the Journal of Labor Economics</em>
 										<br>
 										<span style='font-size: .7rem; text-align: justify;'>
 										
