--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ You can find my résumé <a target="_blank" rel="noopener noreferrer" href='http
 									</div>
 									
 									<div class="paper-status">
-										<em>Conditionally Accepted at the Journal of Labor Economics</em>
+										<em>Conditionally Accepted at <i>the Journal of Labor Economics</i></em>
 									</div>
 									
 									<div class="paper-abstract">
